--- a/Rubik/rubik.css
+++ b/Rubik/rubik.css
@@ -5,10 +5,12 @@ body{
   background-position: right top;
   padding: 15px 95px 15px 15px;
   background-image: url(hatterkocka.png);
+  color: #443502;
 }
 
 #cimkep{
-  float:left;  
+  float:left;
+  height: 150px;  
 }
 
 h1{
@@ -17,6 +19,7 @@ h1{
 
 p{
   text-align: justify;
+  margin: 5px;
 }
 
 
