--- a/Sárga süti/suti.css
+++ b/Sárga süti/suti.css
@@ -3,9 +3,11 @@
     border-style: none solid;
 	border-color:gray;
     border-width: 20px;
+    padding: 20px;
+    width: 70%;
 }
 .ritka{
-    
+    letter-spacing: 4px;
 }
 #kep{
     width:40%;
@@ -16,6 +18,8 @@
     border-radius: 10px;
     border-style: solid;
     float: right;
+    margin: 30px;
+    border: 3px;
 }
 input{
     font-family:cursive; 
@@ -24,8 +28,17 @@ input{
 }
 body{
     font-family: cursive;
+    background-image: url(hatter.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 p{
     text-align: justify;
+}
+
+ul{
+    font-weight: bold;
+    font-style: italic;
+    list-style: square;
 }
